--- a/app/src/main/res/layout/activity_story_music.xml
+++ b/app/src/main/res/layout/activity_story_music.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/story_music_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="24dp"
     android:paddingStart="24dp"
     android:paddingRight="24dp"
-    android:paddingEnd="24dp"/>
+    android:paddingEnd="24dp"
+    />
