--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,6 +36,10 @@
         <item name="android:textColor">@color/app_sixth_transparent_50p</item>
     </style>
 
+    <style name="App.TextStyle.Tertiary" parent="App.TextStyle.Primary">
+        <item name="android:textColor">@color/app_secondary</item>
+    </style>
+
     <style name="MenuListItemStyle" parent="">
         <item name="android:clickable">true</item>
         <item name="android:layout_width">match_parent</item>
@@ -61,7 +65,9 @@
 
     <style name="View.Divider" parent="">
         <item name="android:background">#1A2D3437</item>
-        <item name="android:maxHeight">0.5dp</item>
-        <item name="android:minHeight">0.5dp</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">0dp</item>
     </style>
 </resources>
