--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
 
     <dimen name="config_minScalingTouchMajor">48dp</dimen>
     <dimen name="config_minScalingSpan">27mm</dimen>
+
+    <dimen name="story_release_share_item_width">80dp</dimen>
+    <dimen name="story_release_item_padding">12dp</dimen>
 </resources>
