--- a/app/src/main/res/values/configs.xml
+++ b/app/src/main/res/values/configs.xml
@@ -2,10 +2,11 @@
 <resources>
 
     <!--域名 结尾不能有斜杠-->
-    <string name="app_domain">http://106.75.194.11</string>
+    <string name="app_domain">wisdemo.sinaapp.com</string>
     <string name="www_schema">http</string>
-    <string name="www_host">106.75.194.11</string>
+    <string name="www_host">wisdemo.sinaapp.com</string>
     <string name="www_port">80</string>
+    <string name="www_path">wis/index.php/v1</string>
     <string name="www_version">v1</string>
     <string name="www_timeout_mills">3000</string>
 
