--- a/app/src/main/res/xml/config.xml
+++ b/app/src/main/res/xml/config.xml
@@ -27,4 +27,8 @@
     <feature name="File">
         <param name="android-package" value="com.wisape.android.cordova.FileUtils"/>
     </feature>
+
+    <feature name="Test">
+        <param name="android-package" value="com.wisape.android.cordova.TestPlugin" /><!-- value:包名.类名 -->
+    </feature>
 </widget>
