--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -4,30 +4,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <Button
+    <TextView
+        android:id="@+id/password_reset_notice_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/password_reset"
-        android:id="@+id/password_reset_btn"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/password_reset_email_account_text"
+        android:layout_marginBottom="120dp"
+        android:drawablePadding="20dp"
+        android:drawableTop="@mipmap/lock"
+        android:gravity="center"
+        android:text="@string/password_reset_notice_text"
+        android:lineSpacingMultiplier="1.4"
+        android:textColor="@android:color/darker_gray"/>
+
+    <TextView
+        android:id="@+id/password_reset_email_account_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/password_reset_email_edit"
+        android:layout_marginEnd="10dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginStart="18dp"
+        android:text="@string/password_reset_email_account_text"
+        android:textColor="@android:color/darker_gray"/>
 
     <com.wisape.android.widget.SignUpEditText
+        android:id="@+id/password_reset_email_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/view"
         android:layout_above="@+id/password_reset_btn"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="44dp"
-        app:action="@drawable/icon_edit_clear_selector"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:inputType="text"
+        app:action="@drawable/cancel"
+        app:edit_background="@drawable/sign_up_edit_bg_normal"
+        app:edit_height="40dp"
         app:show_error="true"
+        app:paddingEnd="-10dp"
+        app:warning_height="24dp"
         app:warning_icon="@drawable/icon_warning"
         app:warning_icon_paddingEnd="9dp"
         app:warning_textStyle="@style/SignUp.Warning"
-        app:edit_background="@drawable/sign_up_edit_bg_normal"
-        app:edit_height="40dp"
-        app:warning_height="24dp"
-        android:inputType="text"/>
+        app:edit_textStyle="@style/password_reset_edit"/>
+
+    <Button
+        android:id="@+id/password_reset_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@color/app_secondary"
+        android:text="@string/password_reset"
+        android:textAllCaps="false"/>
 
 </RelativeLayout>
