--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- Common -->
     <color name="app_primary">#FFFFFF</color>
+    <color name="app_edit_bottom">@android:color/darker_gray</color>
     <color name="app_primary_transparent_10p">#1AFFFFFF</color>
     <color name="app_primary_transparent_30p">#4DFFFFFF</color>
     <color name="app_primary_transparent_50p">#80FFFFFF</color>
@@ -12,4 +13,6 @@
     <color name="app_fifth">#FF8800</color>
     <color name="app_sixth">#2D3437</color>
     <color name="app_sixth_transparent_50p">#802D3437</color>
+
+    <color name="app_password_reset_email_edit_text_color">#000000</color>
 </resources>
