--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -11,7 +11,7 @@
         android:layout_above="@+id/password_reset_email_account_text"
         android:layout_marginBottom="120dp"
         android:drawablePadding="20dp"
-        android:drawableTop="@mipmap/lock"
+        android:drawableTop="@mipmap/password_reset_lock"
         android:gravity="center"
         android:text="@string/password_reset_notice_text"
         android:lineSpacingMultiplier="1.4"
@@ -39,7 +39,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:inputType="text"
-        app:action="@drawable/cancel"
+        app:action="@drawable/icon_edit_clear_selector"
         app:edit_background="@drawable/sign_up_edit_bg_normal"
         app:edit_height="40dp"
         app:show_error="true"
