清楚缓存功能 退出功能 关于功能 实现

--- a/app/src/main/res/layout/activity_password_reset_success.xml
+++ b/app/src/main/res/layout/activity_password_reset_success.xml
@@ -15,6 +15,6 @@
         android:lineSpacingMultiplier="1.4"
         android:textSize="16sp"
         android:text="@string/password_reset_success_text_start"
-        android:textColor="@android:color/darker_gray" />
+        style="@style/App.TextStyle.Secondary" />
 
 </LinearLayout>
