--- a/app/src/main/res/drawable/menu_item_background_selector.xml
+++ b/app/src/main/res/drawable/menu_item_background_selector.xml
@@ -4,7 +4,7 @@
         <layer-list>
             <item>
                 <shape>
-                    <solid android:color="@color/app_primary_transparent_10p" />
+                    <solid android:color="@color/app_text_pressed" />
                 </shape>
             </item>
         </layer-list>
