--- a/app/src/main/res/drawable/sign_up_edit_bg_normal.xml
+++ b/app/src/main/res/drawable/sign_up_edit_bg_normal.xml
@@ -10,12 +10,23 @@
             </item>
         </layer-list>
     </item>
-    <item>
+    <item android:state_focused="true">
         <layer-list>
             <item android:top="50dp">
                 <shape>
-                    <solid android:color="@color/app_tertiary"/>
-                    <size android:width="10000dp" android:height="1dp"/>
+                    <solid android:color="@color/app_secondary"/>
+                    <size android:width="10000dp" android:height="2dp"/>
+                </shape>
+            </item>
+        </layer-list>
+    </item>
+
+    <item android:state_focused="false" android:state_selected="false">
+        <layer-list>
+            <item android:top="50dp">
+                <shape>
+                    <solid android:color="@color/app_edit_normal"/>
+                    <size android:width="10000dp" android:height="0.5dp"/>
                 </shape>
             </item>
         </layer-list>
