--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,15 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+    <TextView
+        style="@style/App.TextStyle.Secondary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/app_about_text_color"
+        android:background="@drawable/menu_item_background_selector"
+        android:text="@string/about_privacy_policy" />
 
+    <TextView
+        style="@style/App.TextStyle.Secondary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:background="@drawable/menu_item_background_selector"
+        android:textColor="@color/app_about_text_color"
+        android:text="@string/about_terms_of_service"
+        android:layout_marginTop="64dp"/>
+
+    <TextView
+        style="@style/App.TextStyle.Secondary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:background="@drawable/menu_item_background_selector"
+        android:textColor="@color/app_about_text_color"
+        android:text="@string/about_rate"
+        android:layout_marginTop="64dp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
     <TextView
         android:id="@+id/about_version_text"
+        style="@style/App.TextStyle.Secondary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:drawableTop="@drawable/icon_logo_large"/>
+        android:layout_marginBottom="30dp"
+        android:drawablePadding="10dp"
+        android:textSize="16sp"
+        android:drawableTop="@mipmap/login_logo"
+        android:gravity="center" />
 
-</RelativeLayout>
+</LinearLayout>
