--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/navbg">
+    android:layout_height="match_parent">
     <!--Main -->
     <RelativeLayout
         android:id="@+id/drawer_main"
@@ -14,7 +14,8 @@
             android:id="@+id/main_view"
             android:name="com.wisape.android.fragment.CardGalleryFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:layout="@layout/fragment_card_gallery" />
     </RelativeLayout>
 
 
