--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -23,11 +23,11 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/password_reset_email_edit"
         android:layout_marginEnd="10dp"
-        android:layout_marginLeft="18dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginRight="10dp"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="5dp"
         android:text="@string/password_reset_email_account_text"
-        android:textColor="@android:color/darker_gray"/>
+        style="@style/App.TextStyle.Secondary"/>
 
     <com.wisape.android.widget.SignUpEditText
         android:id="@+id/password_reset_email_edit"
@@ -43,12 +43,11 @@
         app:edit_background="@drawable/sign_up_edit_bg_normal"
         app:edit_height="40dp"
         app:show_error="true"
-        app:paddingEnd="-10dp"
         app:warning_height="24dp"
         app:warning_icon="@drawable/icon_warning"
         app:warning_icon_paddingEnd="9dp"
         app:warning_textStyle="@style/SignUp.Warning"
-        app:edit_textStyle="@style/password_reset_edit"/>
+        app:edit_textStyle="@style/App.TextStyle.Edit"/>
 
     <Button
         android:id="@+id/password_reset_btn"
