--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -13,8 +13,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
         fresco:roundAsCircle="true"
-        fresco:placeholderImage="@drawable/default_user_icon"
-        fresco:failureImage="@drawable/default_user_icon"/>
+        fresco:placeholderImage="@mipmap/icon_menu_default_head"
+        fresco:failureImage="@mipmap/icon_menu_default_head"/>
 
     <TextView
         android:id="@+id/tv_name"
@@ -25,7 +25,7 @@
         android:paddingLeft="@dimen/span_space"
         android:paddingRight="@dimen/span_space"
         android:singleLine="true"
-        android:textColor="@color/app_primary"
+        android:textColor="@color/app_sixth"
         android:textSize="@dimen/app_text_size_large" />
 
     <TextView
@@ -38,30 +38,44 @@
         android:paddingLeft="@dimen/span_space"
         android:paddingRight="@dimen/span_space"
         android:singleLine="true"
-        android:textColor="@color/app_primary"
+        android:textColor="@color/app_sixth_transparent_50p"
         android:textSize="@dimen/app_text_size_small" />
 
     <!--menu item -->
+
     <TextView
         android:id="@+id/message_center"
         style="@style/MenuListItemStyle"
-        android:text="@string/message_center" />
+        android:text="@string/message_center"
+        android:drawablePadding="-50dp"
+        android:layout_marginLeft="50dp"
+        android:drawableLeft="@mipmap/icon_menu_message"/>
+
 
 
     <TextView
         android:id="@+id/help_center"
         style="@style/MenuListItemStyle"
-        android:text="@string/help_center" />
+        android:text="@string/help_center"
+        android:drawablePadding="-50dp"
+        android:layout_marginLeft="50dp"
+        android:drawableLeft="@mipmap/icon_menu_help" />
 
     <TextView
         android:id="@+id/clear_buffer"
         style="@style/MenuListItemStyle"
-        android:text="@string/clear_buffer" />
+        android:text="@string/clear_buffer"
+        android:drawablePadding="-50dp"
+        android:layout_marginLeft="50dp"
+        android:drawableLeft="@mipmap/icon_menu_clear"/>
 
     <TextView
         android:id="@+id/about"
         style="@style/MenuListItemStyle"
-        android:text="@string/about_label" />
+        android:text="@string/about_label"
+        android:drawablePadding="-50dp"
+        android:layout_marginLeft="50dp"
+        android:drawableLeft="@mipmap/icon_menu_about"/>
 
 
     <!--login out-->
@@ -74,6 +88,9 @@
             style="@style/MenuListItemStyle"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/span_space"
-            android:text="@string/exit_login" />
+            android:drawablePadding="-50dp"
+            android:layout_marginLeft="50dp"
+            android:text="@string/exit_login"
+            android:drawableLeft="@mipmap/icon_menu_logout"/>
     </RelativeLayout>
 </LinearLayout>
