--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,6 +32,10 @@
         <item name="android:textSize">@dimen/app_text_size_medium</item>
     </style>
 
+    <style name="App.TextStyle.Edit" parent="App.TextStyle.Primary">
+        <item name="android:textSize">@dimen/app_text_size_xlarge</item>
+    </style>
+
     <style name="App.TextStyle.Secondary" parent="App.TextStyle.Primary">
         <item name="android:textColor">@color/app_sixth_transparent_50p</item>
     </style>
@@ -45,7 +49,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/menu_list_item_height</item>
         <item name="android:background">@drawable/menu_item_background_selector</item>
-        <item name="android:textColor">@color/menu_item_text_selector</item>
+        <item name="android:textColor">@color/app_sixth</item>
         <item name="android:textSize">@dimen/app_text_size_medium</item>
         <item name="android:gravity">center</item>
     </style>
@@ -86,4 +90,5 @@
         <item name="android:textColor">@color/app_password_reset_email_edit_text_color</item>
         <item name="android:textSize">24sp</item>
     </style>
+
 </resources>
