修改下载文件不能获取文件大小的bug

--- a/app/src/main/assets/www/views/editor_index.html
+++ b/app/src/main/assets/www/views/editor_index.html
@@ -112,8 +112,16 @@
         }
 
         function onDownloading(progress){
-            var message = "progress：" + progress;
+            var message = "progress:" + progress;
             showMessage(message);
+        }
+
+        function onCompleted(path){
+            showMessage(path);
+        }
+
+        function onError(){
+            alert("download error!");
         }
 
         function showMessage(message){
