新增下载字体和读取场景

--- a/app/src/main/res/values/configs_uri.xml
+++ b/app/src/main/res/values/configs_uri.xml
@@ -14,6 +14,7 @@
     <string name="uri_music_list">music/list</string>
     <string name="uri_template_download">template/download</string>
     <string name="uri_music_download">music/download</string>
+    <string name="uri_font_download">fonts/DLbyName</string>
     <!--获取模板类型列表-->
     <string name="uri_template_gettype">template/gettype</string>
     <string name="uri_music_gettype">music/gettype</string>
